--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "server.js"
+            "dest": "/server.js"
         },
         {
             "src": "/(.*)",
-            "dest": "server.js"
+            "dest": "/index.js"
         }
     ],
     "env": {
