--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,20 @@
 {
     "version": 2,
-    "routes": [
+    "rewrites": [
         {
-            "src": "/(.*)",
-            "dest": "/index.js"
+            "source": "/api/(.*)",
+            "destination": "/api/index.js"
         },
         {
-            "src": "/(.*)",
-            "dest": "/index.js"
+            "source": "/(.*)",
+            "destination": "/api/index.js"
         }
     ],
     "env": {
         "NODE_ENV": "production"
     },
     "functions": {
-        "server.js": {
+        "api/index.js": {
             "maxDuration": 30
         }
     }
