--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,18 @@
 {
     "version": 2,
-    "rewrites": [
+    "builds": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        },
+            "src": "api/index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
         {
-            "source": "/(.*)",
-            "destination": "/api/index.js"
+            "src": "/(.*)",
+            "dest": "/api/index.js"
         }
     ],
     "env": {
         "NODE_ENV": "production"
-    },
-    "functions": {
-        "api/index.js": {
-            "maxDuration": 30
-        }
     }
 }
