--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env
 NODE_ENV=production
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/quiz_competition
+MONGODB_URI=mongodb+srv://uzwebcoder:40g948_SA@cluster0.f4o0m.mongodb.net/
 JWT_SECRET=your_super_secret_jwt_key_here
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 REDIS_URL=redis://localhost:6379
