--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "mongoose-paginate-v2": "^1.9.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
     "nodemon": "^3.1.10",
